fixed built-in label wrong color  and custom rpc provider not visible after adding.

--- a/src/app/wallet/pages/settings/edit-builtin-network/edit-builtin-network.page.scss
+++ b/src/app/wallet/pages/settings/edit-builtin-network/edit-builtin-network.page.scss
@@ -136,8 +136,8 @@ ion-content {
 
           .rpc-provider-type {
             .builtin-badge {
-              background: var(--ion-color-primary);
-              color: white;
+              background: var(--ion-text-color);
+              color: var(--ion-background-color);
               padding: 2px 6px;
               border-radius: 4px;
               font-size: 10px;
